# discordbot-voicechannelactivity

./: .gitignore  Makefile  README.md  depedencies.txt  main.py  pyproject.toml  requirements.txt  voicechannelactivitybot.py
.github/workflows/: package-lint.yml  package-test.yml  share-status.yml
src/vca_bot/: __init__.py  cli.py
test/unit/: test_vca_bot.py
