[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vca_bot"
version = "0.0.1"
description = "A discord bot that monitors and announces voice channel activity in a server"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
VCABot = "vca_bot.cli:VCABot"
